# Scikit_Learn_Test

./: README.md  main.py  pyproject.toml
heart_disease/: __init__.py  main.py
