[tool.poetry]
name = "heart-disease"
version = "0.1.0"
description = ""
authors = ["Mateus Lucas <mateuslucas1879@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"





[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.8"
mkdocstrings = "^0.23.0"


[tool.poetry.group.code.dependencies]
pandas = "^1.3.3"
numpy = ">=1.21,<2.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
